fix: main text-overflow

--- a/assets/app.css
+++ b/assets/app.css
@@ -626,6 +626,7 @@ svg path {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  max-width: 100%;
 }
 
 .main-box-title {
